@@ -155,19 +155,19 @@ public class BMatUtil {
 	}
 
 	public static int clamp(int value, int min, int max) {
-		return Math.min(Math.max(value, min), max);
+		return Math.clamp(value, min, max);
 	}
 
 	public static long clamp(long value, long min, long max) {
-		return Math.min(Math.max(value, min), max);
+		return Math.clamp(value, min, max);
 	}
 
 	public static float clamp(float value, float min, float max) {
-		return Math.min(Math.max(value, min), max);
+		return Math.clamp(value, min, max);
 	}
 
 	public static double clamp(double value, double min, double max) {
-		return Math.min(Math.max(value, min), max);
+		return Math.clamp(value, min, max);
 	}
 
 	/* ======================== minMax ======================== */
